--- a/WHSpotifyDemo/NowPlayingDetailView.xib
+++ b/WHSpotifyDemo/NowPlayingDetailView.xib
@@ -8,6 +8,7 @@
     <customFonts key="customFonts">
         <mutableArray key="HelveticaNeue.ttc">
             <string>HelveticaNeue</string>
+            <string>HelveticaNeue</string>
         </mutableArray>
         <mutableArray key="HelveticaNeueLights.ttc">
             <string>HelveticaNeue-Light</string>
@@ -39,8 +40,31 @@
                                     <action selector="hideButton_pressed:" destination="BVX-Qu-9yK" eventType="touchUpInside" id="ICF-CA-EkU"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Playing from" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftn-2g-5c6" userLabel="musicServiceOriginLabel">
+                                <rect key="frame" x="131.5" y="440" width="67" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="tUC-7D-0mY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rd5-cA-h3l" userLabel="musicServiceColorLabel">
+                                <rect key="frame" x="116" y="447" width="10" height="10"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="6ha-zU-gf2"/>
+                                    <constraint firstAttribute="width" constant="10" id="Axc-ob-aC8"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FWj-ps-3a4" userLabel="playPauseButton">
-                                <rect key="frame" x="145" y="399" width="30" height="30"/>
+                                <rect key="frame" x="145" y="392" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="fW7-EF-Ac3"/>
                                     <constraint firstAttribute="width" constant="30" id="rQx-Hs-wxy"/>
@@ -59,7 +83,7 @@
                                 <rect key="frame" x="20" y="358" width="280" height="4"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vBG-a0-CZA" userLabel="progressBarDuration">
-                                        <rect key="frame" x="0.0" y="0.0" width="25" height="6"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="6"/>
                                         <color key="backgroundColor" red="0.1315285712" green="0.69204771519999997" blue="0.75478690859999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="6" id="BYz-le-kf3"/>
@@ -88,7 +112,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ki-Vs-utI" userLabel="nextButton">
-                                <rect key="frame" x="183" y="401" width="30" height="26"/>
+                                <rect key="frame" x="183" y="394" width="30" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="Z6f-0b-iba"/>
                                     <constraint firstAttribute="width" constant="30" id="c2B-zF-Uh8"/>
@@ -99,7 +123,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VIC-H7-4tJ" userLabel="previousButton">
-                                <rect key="frame" x="99" y="401" width="30" height="26"/>
+                                <rect key="frame" x="99" y="394" width="30" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="LJ8-TG-QHS"/>
                                     <constraint firstAttribute="height" constant="26" id="W6j-nV-Xye"/>
@@ -150,6 +174,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Rd5-cA-h3l" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="28" id="03M-n6-WrV"/>
                             <constraint firstItem="naw-hl-EaI" firstAttribute="top" secondItem="cra-PY-HaV" secondAttribute="bottom" constant="19" id="0qj-lj-hEZ"/>
                             <constraint firstItem="naw-hl-EaI" firstAttribute="top" secondItem="cra-PY-HaV" secondAttribute="bottom" constant="1" id="2ef-cc-BQP"/>
                             <constraint firstItem="NmZ-G8-jgb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="3Ht-Nr-L1D"/>
@@ -157,12 +182,14 @@
                             <constraint firstItem="Oqj-xO-0s3" firstAttribute="top" secondItem="NmZ-G8-jgb" secondAttribute="bottom" constant="8" id="4ri-Vk-Mx2"/>
                             <constraint firstItem="osP-D4-hVN" firstAttribute="top" secondItem="ilX-3t-dqV" secondAttribute="top" id="7dh-PW-s3H"/>
                             <constraint firstItem="osP-D4-hVN" firstAttribute="top" secondItem="Oqj-xO-0s3" secondAttribute="bottom" constant="28" id="8oA-7c-DVD"/>
-                            <constraint firstAttribute="bottom" secondItem="VIC-H7-4tJ" secondAttribute="bottom" constant="53" id="9RG-QA-0TC"/>
+                            <constraint firstAttribute="bottom" secondItem="VIC-H7-4tJ" secondAttribute="bottom" constant="60" id="9RG-QA-0TC"/>
                             <constraint firstAttribute="bottom" secondItem="FWj-ps-3a4" secondAttribute="bottom" constant="53" id="CEr-XD-Knr"/>
                             <constraint firstItem="VIC-H7-4tJ" firstAttribute="centerY" secondItem="FWj-ps-3a4" secondAttribute="centerY" id="D5p-Qa-qa2"/>
                             <constraint firstItem="osP-D4-hVN" firstAttribute="width" secondItem="ilX-3t-dqV" secondAttribute="width" constant="8" id="Gwb-fz-meW"/>
                             <constraint firstItem="6ki-Vs-utI" firstAttribute="leading" secondItem="FWj-ps-3a4" secondAttribute="trailing" constant="8" id="I1i-WH-THI"/>
-                            <constraint firstItem="FWj-ps-3a4" firstAttribute="top" secondItem="osP-D4-hVN" secondAttribute="bottom" constant="26" id="Iu0-gg-RGQ"/>
+                            <constraint firstItem="FWj-ps-3a4" firstAttribute="top" secondItem="osP-D4-hVN" secondAttribute="bottom" constant="19" id="Iu0-gg-RGQ"/>
+                            <constraint firstItem="ftn-2g-5c6" firstAttribute="leading" secondItem="Rd5-cA-h3l" secondAttribute="trailing" constant="6" id="KjT-Ip-fOh"/>
+                            <constraint firstItem="ftn-2g-5c6" firstAttribute="centerY" secondItem="Rd5-cA-h3l" secondAttribute="centerY" id="L6k-2a-QKI"/>
                             <constraint firstItem="Oqj-xO-0s3" firstAttribute="top" secondItem="NmZ-G8-jgb" secondAttribute="bottom" constant="8" id="LWO-ZL-ae2"/>
                             <constraint firstItem="cra-PY-HaV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="23" id="Lrg-db-31i"/>
                             <constraint firstItem="FWj-ps-3a4" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Oqv-Tw-M7G"/>
@@ -173,29 +200,40 @@
                             <constraint firstItem="6ki-Vs-utI" firstAttribute="centerY" secondItem="FWj-ps-3a4" secondAttribute="centerY" id="V7b-P2-PYC"/>
                             <constraint firstItem="ilX-3t-dqV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="XgA-P1-D6y"/>
                             <constraint firstItem="osP-D4-hVN" firstAttribute="leading" secondItem="ilX-3t-dqV" secondAttribute="leading" id="bFG-qn-MXX"/>
-                            <constraint firstItem="VIC-H7-4tJ" firstAttribute="top" secondItem="ilX-3t-dqV" secondAttribute="bottom" constant="39" id="cqL-Ha-0iA"/>
+                            <constraint firstAttribute="bottom" secondItem="ftn-2g-5c6" secondAttribute="bottom" constant="16" id="bUT-sz-XvX"/>
+                            <constraint firstItem="VIC-H7-4tJ" firstAttribute="top" secondItem="ilX-3t-dqV" secondAttribute="bottom" constant="32" id="cqL-Ha-0iA"/>
                             <constraint firstItem="ilX-3t-dqV" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="120" id="cqm-Po-auy"/>
+                            <constraint firstItem="ftn-2g-5c6" firstAttribute="leading" secondItem="Rd5-cA-h3l" secondAttribute="trailing" constant="8" id="fTB-C5-HoN"/>
+                            <constraint firstItem="ftn-2g-5c6" firstAttribute="centerY" secondItem="Rd5-cA-h3l" secondAttribute="centerY" id="hTH-Ft-gJB"/>
                             <constraint firstItem="NmZ-G8-jgb" firstAttribute="top" secondItem="naw-hl-EaI" secondAttribute="bottom" constant="8" id="jY2-3q-Hd2"/>
                             <constraint firstItem="naw-hl-EaI" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ku9-BF-tuB"/>
                             <constraint firstItem="ilX-3t-dqV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="m5l-Th-KYU"/>
                             <constraint firstAttribute="trailing" secondItem="NmZ-G8-jgb" secondAttribute="trailing" constant="50" id="mGc-4o-fdR"/>
+                            <constraint firstItem="Rd5-cA-h3l" firstAttribute="leading" secondItem="cra-PY-HaV" secondAttribute="trailing" constant="29" id="qoa-8a-3yE"/>
                             <constraint firstAttribute="trailing" secondItem="Oqj-xO-0s3" secondAttribute="trailing" constant="50" id="vVS-lZ-2wc"/>
                             <constraint firstItem="Oqj-xO-0s3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="vgS-JV-3dJ"/>
+                            <constraint firstItem="ftn-2g-5c6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="5" id="wwZ-JF-ZX5"/>
                             <constraint firstAttribute="trailing" secondItem="ilX-3t-dqV" secondAttribute="trailing" constant="20" id="xJY-6A-cpv"/>
-                            <constraint firstItem="VIC-H7-4tJ" firstAttribute="top" secondItem="osP-D4-hVN" secondAttribute="bottom" constant="28" id="xNP-89-9MN"/>
+                            <constraint firstItem="VIC-H7-4tJ" firstAttribute="top" secondItem="osP-D4-hVN" secondAttribute="bottom" constant="21" id="xNP-89-9MN"/>
                             <constraint firstItem="cra-PY-HaV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="21" id="ykq-kX-Gni"/>
+                            <constraint firstItem="ftn-2g-5c6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="23.5" id="zL5-0E-hiG"/>
                             <constraint firstItem="FWj-ps-3a4" firstAttribute="leading" secondItem="VIC-H7-4tJ" secondAttribute="trailing" constant="16" id="znN-yR-mAs"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="0qj-lj-hEZ"/>
                                 <exclude reference="ku9-BF-tuB"/>
+                                <exclude reference="03M-n6-WrV"/>
+                                <exclude reference="qoa-8a-3yE"/>
                                 <exclude reference="cqm-Po-auy"/>
                                 <exclude reference="m5l-Th-KYU"/>
                                 <exclude reference="T0r-e4-pBd"/>
                                 <exclude reference="4bd-nm-0Pt"/>
                                 <exclude reference="CEr-XD-Knr"/>
                                 <exclude reference="RuW-yD-rM0"/>
+                                <exclude reference="L6k-2a-QKI"/>
+                                <exclude reference="fTB-C5-HoN"/>
+                                <exclude reference="zL5-0E-hiG"/>
                             </mask>
                         </variation>
                     </view>
@@ -213,6 +251,8 @@
             <connections>
                 <outlet property="albumArtImageView" destination="KsE-83-Gec" id="kh7-TA-eWO"/>
                 <outlet property="artistLabel" destination="Oqj-xO-0s3" id="JVX-jZ-87h"/>
+                <outlet property="musicServiceColorLabel" destination="Rd5-cA-h3l" id="rtZ-r4-Tog"/>
+                <outlet property="musicServiceOriginLabel" destination="ftn-2g-5c6" id="nwo-EE-Pl5"/>
                 <outlet property="nextButton" destination="6ki-Vs-utI" id="aCb-EK-a6U"/>
                 <outlet property="playPauseButton" destination="FWj-ps-3a4" id="ODA-EB-a41"/>
                 <outlet property="previousButton" destination="VIC-H7-4tJ" id="5sB-Sl-aUs"/>
