--- a/WHSpotifyDemo/TrackTableViewCell.xib
+++ b/WHSpotifyDemo/TrackTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="HelveticaNeue.ttc">
@@ -36,8 +37,29 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lyr-0A-WRf" userLabel="musicServiceColorLabel">
+                        <rect key="frame" x="302" y="21" width="10" height="10"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="10" id="Jqk-sP-EcV"/>
+                            <constraint firstAttribute="width" constant="10" id="See-Xh-1Dz"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="Lyr-0A-WRf" firstAttribute="trailing" secondItem="xFj-oZ-0gK" secondAttribute="trailingMargin" id="1gl-aW-SFk"/>
+                    <constraint firstItem="Lyr-0A-WRf" firstAttribute="centerY" secondItem="xFj-oZ-0gK" secondAttribute="centerY" id="9kk-pr-SCL"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="musicServiceColorLabel" destination="Lyr-0A-WRf" id="1R1-Co-80N"/>
+            </connections>
             <point key="canvasLocation" x="440" y="368.5"/>
         </tableViewCell>
     </objects>
