--- a/WHMusicPlayer/NowPlayingDetailView.xib
+++ b/WHMusicPlayer/NowPlayingDetailView.xib
@@ -105,11 +105,16 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="osP-D4-hVN" userLabel="progressBarTouch">
-                                <rect key="frame" x="20" y="358" width="288" height="15"/>
+                                <rect key="frame" x="20" y="349" width="288" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="NjV-RW-eET"/>
+                                    <constraint firstAttribute="height" constant="24" id="NjV-RW-eET"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="15" id="yj8-Te-5xZ"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="yj8-Te-5xZ"/>
+                                    </mask>
+                                </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ki-Vs-utI" userLabel="nextButton">
                                 <rect key="frame" x="183" y="394" width="30" height="26"/>
@@ -180,8 +185,8 @@
                             <constraint firstItem="NmZ-G8-jgb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="3Ht-Nr-L1D"/>
                             <constraint firstItem="FWj-ps-3a4" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="4bd-nm-0Pt"/>
                             <constraint firstItem="Oqj-xO-0s3" firstAttribute="top" secondItem="NmZ-G8-jgb" secondAttribute="bottom" constant="8" id="4ri-Vk-Mx2"/>
-                            <constraint firstItem="osP-D4-hVN" firstAttribute="top" secondItem="ilX-3t-dqV" secondAttribute="top" id="7dh-PW-s3H"/>
-                            <constraint firstItem="osP-D4-hVN" firstAttribute="top" secondItem="Oqj-xO-0s3" secondAttribute="bottom" constant="28" id="8oA-7c-DVD"/>
+                            <constraint firstItem="osP-D4-hVN" firstAttribute="top" secondItem="ilX-3t-dqV" secondAttribute="top" constant="-9" id="7dh-PW-s3H"/>
+                            <constraint firstItem="osP-D4-hVN" firstAttribute="top" secondItem="Oqj-xO-0s3" secondAttribute="bottom" constant="19" id="8oA-7c-DVD"/>
                             <constraint firstAttribute="bottom" secondItem="VIC-H7-4tJ" secondAttribute="bottom" constant="60" id="9RG-QA-0TC"/>
                             <constraint firstAttribute="bottom" secondItem="FWj-ps-3a4" secondAttribute="bottom" constant="53" id="CEr-XD-Knr"/>
                             <constraint firstItem="VIC-H7-4tJ" firstAttribute="centerY" secondItem="FWj-ps-3a4" secondAttribute="centerY" id="D5p-Qa-qa2"/>
@@ -262,7 +267,7 @@
                 <outlet property="progressBarView" destination="ilX-3t-dqV" id="ZQi-wX-Qlj"/>
                 <outlet property="titleLabel" destination="NmZ-G8-jgb" id="Gvq-qz-hkB"/>
             </connections>
-            <point key="canvasLocation" x="580" y="621"/>
+            <point key="canvasLocation" x="378" y="624"/>
         </viewController>
     </objects>
     <resources>
